2004-05-03 Stefan Jones <stefan.jones@multigig.com>

	* src/spicelib/analysis/acan.c:
	So resume works for ac analysis

2004-05-03 Stefan Jones <stefan.jones@multigig.com>

	* src/spicelib/parser/inp2dot.c:
	Fix .noise statements by reverting Brorson's INPgetNetTok lines

2003-12-24 Stefan Jones <stefan.jones@multigig.com>

	* configure.in:
	Fix the check for headers so it actually uses the info from tclConfig.sh

2003-12-13 Evgeny Fiksman <fike@bezeqint.net>

	* src/frontend/terminal.c:
	Increase the buffer size for tgetent

2003-12-03 Stefan Jones <stefan.jones@multigig.com>

	* configure.in:
	Change to version 0.2.15

2003-10-31 Stuart Brorson <sdb@cloud9.net>
 
	*  Integrated readline into ngspice CLI.  Code was shamelessly
	stolen from http://www.btae.mam.gov.tr/~genc/ngspice/ & reworked by SDB.

	*  Fixed makefiles in src/xspice/icm and src/xspice/cmpp to make distclean
	without barfing.

2003-09-30 Vera Albrecht <albrecht@danalyse.de>

	* src/include/cktdefs.h src/spicelib/analysis/noisean.c:
	Fix resuming noise analysis causing segfault,
	also fix compiler warnings.

2003-08-31 Stefan Jones <stefan.jones@multigig.com>

	* configure.in:
	Change linking order of libxspmif.a and libxspcm.a

	* tests/TransImpedanceAmp/output.net:
	processed with dos2unix
	
	* configure.in src/spinit.in src/spinit
	src/xspice/cmpp/Makefile src/xspice/cmpp/Makefile.in:
	Make configure automatically set paths for lex yacc and install dir

2003-08-30 Stefan Jones <stefan.jones@multigig.com>

	* src/Makefile.am Makefile.am README.Tcl
	src/xspice/README src/xspice/icm/README
	src/xspice/icm/spice2poly/icm_spice2poly/README:
	Updated to reflect codemodel support is now complete

	* src/xspice/{Makefile.am,xspice.c} 
	src/xspice/cm/{cmexport.c,Makefile.am}:
	Moved the xspice library hooks into the cm directory
	
	* src/Makefile.am src/ngspice.idx:
	Remove ngspice.idx and make it auto-generated and installed
	
	* configure.in:
	Change version to 0.2.14
