@@ -1,3 +1,8 @@
+2004-05-19 Stefan Jones <stefan.jones@multigig.com>
+
+	* src/tclspice.c:
+	Made the trigger time more exact
+
 2004-05-03 Stefan Jones <stefan.jones@multigig.com>
 
 	* src/spicelib/analysis/acan.c:
